testsuite/tests/typing-jkind-bounds/inclusion/test.compilers.reference
File "inclusion.ml", line 1:
Error: The implementation "inclusion.ml"
       does not match the interface "inclusion.cmi": 
       Type declarations do not match:
         type ('a, 'b, 'c) t
           : value
               mod portable
               with 'a
               
               with 'b
               
               with ('a * 'b, 'c) u
               
               with ('b, 'c) u
       is not included in
         type ('a, 'b, 'c) t
           : value mod portable with 'a with 'b with ('b, 'c) u
       The kind of the first is 
           value
             mod portable
             with 'a
             
             with 'b
             
             with ('a * 'b, 'c) u
             
             with ('b, 'c) u
         because of the definition of t at file "inclusion.ml", lines 3-7, characters 0-76.
       But the kind of the first must be a subkind of 
           value mod portable with 'a with 'b with ('b, 'c) u.
       File "inclusion.mli", lines 3-7, characters 0-76: Expected declaration
       File "inclusion.ml", lines 3-7, characters 0-76: Actual declaration
